[package]

name = "twilio"
version = "0.1.5"
description = "Rust bindings for the Twilio API"
readme = "README.md"
repository = "https://github.com/neil-lobracco/twilio-rs"
license = "MIT"
authors = ["Neil LoBracco <neil.lobracco@gmail.com>", "Lance Carlson <lancecarlson@gmail.com>"]
keywords = ["twilio","rust"]

[dependencies]
reqwest= { version="0.10", features=["blocking"] }
mime = "^0.3"
rust-crypto = "^0.2"
url="^2.0"
serde = "^1.0"
serde_derive = "^1.0"
serde_json = "^1.0"
base64 = "0.6"

[dev-dependencies]
dotenv = "0.15"
